added userguide and license elements

--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
     <footer>
       <a href="https://twitter.com/nickrp"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
       <a href="https://facebook.com/nickpettit"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-      <p>&copy; 2014 Nick Pettit.</p>
+      <div>
+        <p class="ico">&copy; 2017 Purple-08</p>
+        <p class="ico"> &#183; </p>
+        <p class="ico"><a href="https://github.com/gunoong011/os_second_project/blob/master/modify/How_to_use_page.md" target="_blank">User Guide</a></p>
+        <p class="ico"> &#183; </p>
+        <p class="ico"><a href="https://github.com/gunoong011/os_second_project/blob/master/LICENSE" target="_blank">License</a></p>
+      </div>
     </footer>
   </div>
 
